--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,14 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  min-width: 60%;
+  margin: 20px auto; 
+  padding: 0 1rem;
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
+
 
 
